--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "cd ../client && npm start",
+    "dev":"concurrently \"npm run server\" \"npm run client\""
+
   },
   "keywords": [],
   "author": "",
@@ -18,6 +21,7 @@
     "pg": "^8.7.1"
   },
   "devDependencies": {
+    "concurrently": "^6.2.1",
     "nodemon": "^2.0.13"
   }
 }
