--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,7 @@
     "start": "node server.js",
     "server": "nodemon server.js",
     "client": "cd ../client && npm start",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
-
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "keywords": [],
   "author": "",
@@ -18,7 +17,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
-    "pg": "^8.7.1"
+    "pg": "^8.7.1",
+    "react-router-dom": "^5.3.0"
   },
   "devDependencies": {
     "concurrently": "^6.2.1",
